--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Children-of-the-Whirlwind_3321
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Scott, Leroy
@@ -8,6 +11,8 @@ creator:
     gutenberg_agent_id: '1176'
     url: http://www.gutenberg.org/2009/agents/1176
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/3321#Children-of-the-Whirlwind
 gutenberg_issued: '2002-07-01'
 gutenberg_type: Text
 identifiers:
